@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-10-26T01:39:18Z",
-  "count" : 53,
-  "count_minmax" : [ 53, 128 ],
-  "count_decinc" : [ -75, +128 ],
+  "count" : 128,
+  "count_minmax" : [ 128, 128 ],
+  "count_decinc" : [ -0, +128 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
