@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-10-25T01:42:52Z",
-  "count_outdated" : 229247,
-  "uniques_outdated" : 2265,
-  "count" : 231039,
-  "uniques" : 2287,
+  "timestamp" : "2024-10-26T01:39:18Z",
+  "count_outdated" : 229375,
+  "uniques_outdated" : 2266,
+  "count" : 231167,
+  "uniques" : 2288,
   "clones" : [
     {
-      "timestamp": "2024-10-11T00:00:00Z",
+      "timestamp": "2024-10-12T00:00:00Z",
       "count": 53,
       "count_minmax": [ 53, 128 ],
-      "count_decinc": [ 81, 134 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-10-12T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
+      "count_decinc": [ 75, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +118,15 @@
       "count": 127,
       "count_minmax": [ 127, 127 ],
       "count_decinc": [ 0, 127 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-25T00:00:00Z",
+      "count": 128,
+      "count_minmax": [ 128, 128 ],
+      "count_decinc": [ 0, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
